--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         /* index 시작 */
         .main_index {
             width: 100%;
-            height: 1500px;
+            height: 1200px;
         }
 
         ul > li {
@@ -64,6 +64,10 @@
 
         .main_index > .main_top_index > .main_login_register > ul > li {
             display: inline-block;
+        }
+
+        .main_index > .main_top_index > .main_login_register > ul > li:hover > a {
+            text-decoration: underline;
         }
 
         .main_index > .main_top_index > .main_login_register > ul > li:first-of-type {
@@ -127,9 +131,9 @@
         /* 하단 4개 탭 시작 */
         .main_index > .main_top_index > .main_bottom_index {
             width: 100%;
-            height: 500px;
+            height: 550px;
             position: absolute;
-            bottom: -660px;
+            bottom: -710px;
             display: flex;
             justify-content: space-evenly;
         }
@@ -137,6 +141,11 @@
         .main_index > .main_top_index > .main_bottom_index > div {
             width: 21%;
             cursor: pointer;
+            position: relative;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > div {
+            width: 100%;
         }
 
         .main_index > .main_top_index > .main_bottom_index > .main_subscription {
@@ -157,6 +166,231 @@
             background-color: rgb(237, 95, 107);
         }
 
+        .main_index > .main_top_index > .main_bottom_index > div > div:first-of-type {
+            position: absolute;
+            top: 0;
+            height: 50%;
+        }
+        
+        .main_index > .main_top_index > .main_bottom_index > div > div:first-of-type > p {
+            margin-left: 30px;
+            color: white;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > div:first-of-type > p:first-of-type {
+            margin-top: 45%;
+            padding-bottom: 20px;
+            font-size: 2.2rem;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > div:first-of-type > p:last-of-type {
+            padding-left: 7px;
+            font-size: 1.2rem;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > div:last-child {
+            position: absolute;
+            right: 25px;
+            bottom: 25px;
+            height: 25%;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div:hover > div:nth-of-type(2) {
+            opacity: 1;
+            transition: opacity .8s ease-in-out;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div:hover > div:last-of-type {
+            opacity: 0;
+            transition: .3s ease-in;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_subscription_menu,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_notice_menu,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_community_menu,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_customer_service_menu {
+            position: absolute;
+            bottom: 1.25%;
+            left: 2.5%;
+            right: 2.5%;
+            height: 90%;
+            width: 95%;
+            background-color: white;
+            opacity: 0;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_subscription_menu > p {
+            background-color: rgb(121, 203, 196);
+            font-size: 2.6rem;
+            text-align: center;
+            color: white;
+            padding-bottom: 5px;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_notice_menu > p {
+            background-color: rgb(59, 189, 228);
+            font-size: 2.6rem;
+            text-align: center;
+            color: white;
+            padding-bottom: 5px;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_community_menu > p {
+            background-color: rgb(255, 162, 82);
+            font-size: 2.6rem;
+            text-align: center;
+            color: white;
+            padding-bottom: 5px;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_customer_service_menu > p {
+            background-color: rgb(237, 95, 107);
+            font-size: 2.6rem;
+            text-align: center;
+            color: white;
+            padding-bottom: 5px;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_subscription_menu > .main_subscription_subMenu,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_notice_menu > .main_notice_subMenu,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_community_menu > .main_community_subMenu,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_customer_service_menu > .main_customer_service_subMenu {
+            display: flex;
+            width: 100%;
+            height: 0;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_subscription_menu > .main_subscription_subMenu > div:first-of-type {
+            width: 100%;
+            height: 0;
+            border-right: 5vw solid transparent;
+            border-bottom: 5vw solid transparent;
+            border-top: 5vw solid rgb(121, 203, 196);
+            border-left: 5vw solid rgb(121, 203, 196);
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_notice_menu > .main_notice_subMenu > div:first-of-type {
+            width: 100%;
+            height: 0;
+            border-right: 5vw solid transparent;
+            border-bottom: 5vw solid transparent;
+            border-top: 5vw solid rgb(59, 189, 228);
+            border-left: 5vw solid rgb(59, 189, 228);
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_community_menu > .main_community_subMenu > div:first-of-type {
+            width: 100%;
+            height: 0;
+            border-right: 5vw solid transparent;
+            border-bottom: 5vw solid transparent;
+            border-top: 5vw solid rgb(255, 162, 82);
+            border-left: 5vw solid rgb(255, 162, 82);
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_customer_service_menu > .main_customer_service_subMenu > div:first-of-type {
+            width: 100%;
+            height: 0;
+            border-right: 5vw solid transparent;
+            border-bottom: 5vw solid transparent;
+            border-top: 5vw solid rgb(237, 95, 107);
+            border-left: 5vw solid rgb(237, 95, 107);
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_subscription_menu > .main_subscription_subMenu > div:last-of-type {
+            width: 100%;
+            height: 0;
+            border-right: 5.1vw solid rgb(121, 203, 196);
+            border-bottom: 5vw solid transparent;
+            border-top: 5vw solid rgb(121, 203, 196);
+            border-left: 5vw solid transparent;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_notice_menu > .main_notice_subMenu > div:last-of-type {
+            width: 100%;
+            height: 0;
+            border-right: 5.1vw solid rgb(59, 189, 228);
+            border-bottom: 5vw solid transparent;
+            border-top: 5vw solid rgb(59, 189, 228);
+            border-left: 5vw solid transparent;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_community_menu > .main_community_subMenu > div:last-of-type {
+            width: 100%;
+            height: 0;
+            border-right: 5.1vw solid rgb(255, 162, 82);
+            border-bottom: 5vw solid transparent;
+            border-top: 5vw solid rgb(255, 162, 82);
+            border-left: 5vw solid transparent;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_customer_service_menu > .main_customer_service_subMenu > div:last-of-type {
+            width: 100%;
+            height: 0;
+            border-right: 5.1vw solid rgb(237, 95, 107);
+            border-bottom: 5vw solid transparent;
+            border-top: 5vw solid rgb(237, 95, 107);
+            border-left: 5vw solid transparent;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_subscription_menu > div:last-of-type,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_notice_menu > div:last-of-type,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_community_menu > div:last-of-type,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_customer_service_menu > div:last-of-type {
+            height: 55%;
+            position: absolute;
+            bottom: 1.25%;
+            left: 10%;
+            right: 10%;
+            font-size: 1.4rem;
+            z-index: 9999;
+            text-align: center;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_subscription_menu > div:last-of-type > p,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_notice_menu > div:last-of-type > p,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_community_menu > div:last-of-type > p,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_customer_service_menu > div:last-of-type > p {
+            margin: 15px 0;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_subscription_menu > div:last-of-type > p:hover > a,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_notice_menu > div:last-of-type > p:hover > a,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_community_menu > div:last-of-type > p:hover > a,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_customer_service_menu > div:last-of-type > p:hover > a {
+            text-decoration: underline;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_subscription_menu > div:last-of-type > p > a,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_notice_menu > div:last-of-type > p > a,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_community_menu > div:last-of-type > p > a,
+        .main_index > .main_top_index > .main_bottom_index > div > .main_customer_service_menu > div:last-of-type > p > a {
+            text-decoration: none;
+            color: rgb(29, 28, 28);
+        }
+        /* 하단 4개 탭 끝 */
+
+        /* 하단 4개 탭 메뉴 아이콘 시작 */
+        .main_index > .main_top_index > .main_bottom_index > div > .main_subscription_icon {
+            background: url(/메뉴바아이콘흰색버전/2.청약.png) no-repeat right;
+            background-size: contain;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_notice_icon {
+            background: url(/메뉴바아이콘흰색버전/3.알려드려요.png) no-repeat right;
+            background-size: contain;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_community_icon {
+            background: url(/메뉴바아이콘흰색버전/4.커뮤니티.png) no-repeat right;
+            background-size: contain;
+        }
+
+        .main_index > .main_top_index > .main_bottom_index > div > .main_customer_service_icon {
+            background: url(/메뉴바아이콘흰색버전/5.고객서비스.png) no-repeat right;
+            background-size: contain;
+        }
+        /* 하단 4개 탭 메뉴 아이콘 끝 */
+
         /* index 끝 */
     </style>
 </head>
@@ -164,14 +398,13 @@
     <section class="main_index">
         <section class="main_top_index">
             <div class="main_logo"></div>
-            <a href="#">
-                <div class="main_login_register">
-                    <ul>
-                        <li><a href="#">로그인</a></li>
-                        <li><a href="#">회원가입</a></li>
-                    </ul>
-                </div>
-            </a>
+            <a href="#"></a>
+            <div class="main_login_register">
+                <ul>
+                    <li><a href="#">로그인</a></li>
+                    <li><a href="#">회원가입</a></li>
+                </ul>
+            </div>
             <section class="main_middle_index">
                 <div>
                     <p>어떤 집정보를 찾고 계신가요?</p>
@@ -190,20 +423,74 @@
                         <p>청약</p>
                         <p>청약 일정과<br>점수를 확인해보세요</p>
                     </div>
+                    <div class="main_subscription_menu">
+                        <p>청약</p>
+                        <div class="main_subscription_subMenu">
+                            <div></div>
+                            <div></div>
+                        </div>
+                        <div>
+                            <p><a href="#">청약 일정</a></p>
+                            <p><a href="#">청약 점수 조회</a></p>
+                        </div>
+                    </div>
+                    <div class="main_subscription_icon"></div>
                 </div>
                 <div class="main_notice">
                     <div>
                         <p>알려드려요</p>
                         <p>여러분이 놓친<br>부동산 정보 알아가세요</p>
                     </div>
+                    <div class="main_notice_menu">
+                        <p>알려드려요</p>
+                        <div class="main_notice_subMenu">
+                            <div></div>
+                            <div></div>
+                        </div>
+                        <div>
+                            <p><a href="#">알아두면 좋은 지식</a></p>
+                        </div>
+                    </div>
+                    <div class="main_notice_icon"></div>
                 </div>
                 <div class="main_community">
                     <div>
                         <p>커뮤니티</p>
-                        <p></p>
+                        <p>자유롭게 생생하게<br>인테리어까지</p>
                     </div>
+                    <div class="main_community_menu">
+                        <p>커뮤니티</p>
+                        <div class="main_community_subMenu">
+                            <div></div>
+                            <div></div>
+                        </div>
+                        <div>
+                            <p><a href="#">자유 게시판</a></p>
+                            <p><a href="#">거래후기 게시판</a></p>
+                            <p><a href="#">인테리어 게시판</a></p>
+                            <p><a href="#">뉴스 게시판</a></p>
+                        </div>
+                    </div>
+                    <div class="main_community_icon"></div>
                 </div>
-                <div class="main_customer_service"></div>
+                <div class="main_customer_service">
+                    <div>
+                        <p>고객서비스</p>
+                        <p>안녕하세요<br>여러분의 집집입니다</p>
+                    </div>
+                    <div class="main_customer_service_menu">
+                        <p>고객서비스</p>
+                        <div class="main_customer_service_subMenu">
+                            <div></div>
+                            <div></div>
+                        </div>
+                        <div>
+                            <p><a href="">공지사항</a></p>
+                            <p><a href="">소개</a></p>
+                        </div>
+                    </div>
+                    <div class="main_customer_service_icon"></div>
+                </div>
             </section>
         </section>
     </section>
