--- a/index.html
+++ b/index.html
@@ -113,18 +113,20 @@
             right: 0;
             width: 10%;
             height: 51px;
-            background-color: rgb(0, 65, 66);
             transform: translateY(-50%);
+        }
+
+        .main_index > .main_top_index > .main_middle_index > div > ul > .main_middle_search > button {
+            display: block;
+            width: 100%;
+            height: 100%;
+            background-color: rgb(0, 65, 66);
             background-image: url(/메뉴바아이콘흰색버전/검색.png);
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
-        }
-
-        .main_index > .main_top_index > .main_middle_index > div > ul > .main_middle_search > a {
-            display: block;
-            width: 100%;
-            height: 100%;
+            z-index: 9999;
+            cursor: pointer;
         }
         /* 중간 검색, 배경 끝 */
 
@@ -413,7 +415,7 @@
                             <input type="text">
                             <datalist></datalist>
                         </li>
-                        <li class="main_middle_search"><a href="#"></a></li>
+                        <li class="main_middle_search"><button type="button"></button></li>
                     </ul>
                 </div>
             </section>
