--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             height: 550px;
             position: absolute;
             bottom: -710px;
+            margin: 0 auto;
             display: flex;
             justify-content: space-evenly;
         }
