--- a/header2.html
+++ b/header2.html
@@ -48,8 +48,6 @@
         .header-bar > .header-icon-box > .header-logo {
             width: 100%;
             height: 100%;
-            background: url(./로고수정/중간.png) no-repeat center;
-            background-size: contain;
         }
 
         .header-bar > .header-icon-box > .header-logo > a {
@@ -86,7 +84,7 @@
         /* header-menu 시작 */
         .header-bar > .header-menu {
             position: absolute;
-            top: calc(30vh / 1.5);
+            top: 0;
             height: calc(30vh / 3);
             line-height: calc(30vh / 3);
             display: flex;
