--- a/sidebar.html
+++ b/sidebar.html
@@ -93,7 +93,7 @@
         .side-bar {
             margin-top: calc((100vh - 90vh) / 2);
             position: fixed;
-            background: #928f8f;
+            background: #032421;
             width: 230px;
             min-height: 90vh;
             border-radius: 20px;
